# university-db

./: .gitignore  CMakeLists.txt  Database.cpp  Database.hpp  Employee.cpp  Employee.hpp  FileLoaderSaver.cpp  FileLoaderSaver.hpp  IDatabase.hpp  Menu.cpp  Menu.hpp  PESELValidator.cpp  PESELValidator.hpp  Person.cpp  Person.hpp  README.md  RecordGenerator.cpp  RecordGenerator.hpp  Student.cpp  Student.hpp  main.cpp
RandomData/: adresses.txt  femaleNames.txt  femaleSurnames.txt  indexes.txt  maleNames.txt  maleSurnames.txt  pesels.txt  salaries.txt
gtest/: DatabaseMock.hpp  DatabaseTest.cpp  MenuTest.cpp  PESELValidatorTest.cpp  RecordGeneratorTest.cpp
test/: DatabaseTest.cpp
